--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.8"
 services:
   mysql:
     image: mysql:8.0.23
+    cap_add:
+      - SYS_NICE  # CAP_SYS_NICE
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
@@ -12,6 +14,8 @@ services:
 
   postgres:
     image: postgres:13.1
+    cap_add:
+      - SYS_NICE  # CAP_SYS_NICE
     restart: always
     environment:
       POSTGRES_PASSWORD: example
@@ -20,6 +24,8 @@ services:
 
   adminer:
     image: adminer
+    cap_add:
+      - SYS_NICE  # CAP_SYS_NICE
     restart: always
     ports:
       - 8080:8080
